# mcp-course

./: .gitignore  README.md  README_vi.md  hello.py  pyproject.toml  repomix-output.md  requirements.txt
.github/workflows/: build_documentation.yml  build_pr_documentation.yml  upload_pr_documentation.yml
projects/unit3/build-mcp-server/starter/: README.md  pyproject.toml  server.py  test_server.py  validate_starter.py
projects/unit3/github-actions-integration/: .gitignore
projects/unit3/github-actions-integration/solution/: README.md  manual_test.md  pyproject.toml  server.py  test_server.py
projects/unit3/slack-notification/solution/: README.md  github_events.json  pyproject.toml  server.py
projects/unit3/team-guidelines/: coding-standards.md  pr-guidelines.md
projects/unit3/templates/: bug.md  docs.md  feature.md  performance.md  refactor.md  security.md  test.md
quiz/: README.md  push_questions.py
quiz/data/: unit_1.json
scripts/: pt_br_new.py  pt_br_old.py  translation.py  vi.py
units/en/: _toctree.yml
units/en/unit0/: introduction.mdx
units/en/unit1/: architectural-components.mdx  capabilities.mdx  certificate.mdx  communication-protocol.mdx  gradio-mcp.mdx  introduction.mdx  key-concepts.mdx  mcp-clients.mdx  quiz1.mdx  quiz2.mdx  sdk.mdx  unit1-recap.mdx
units/en/unit2/: clients.mdx  continue-client.mdx  gradio-client.mdx  gradio-server.mdx  introduction.mdx  tiny-agents.mdx
units/en/unit3/: build-mcp-server-solution-walkthrough.mdx  build-mcp-server.mdx  certificate.mdx  conclusion.mdx  github-actions-integration.mdx  introduction.mdx  slack-notification.mdx
units/en/unit3_1/: conclusion.mdx  creating-the-mcp-server.mdx  introduction.mdx  mcp-client.mdx  quiz1.mdx  quiz2.mdx  setting-up-the-project.mdx  webhook-listener.mdx
units/vi/: _toctree.yml
units/vi/unit0/: introduction.mdx
units/vi/unit1/: architectural-components.mdx  capabilities.mdx  communication-protocol.mdx  (+5 more)
(+22 files in other folders)
